// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/backstage/components/BackstageList Should match snapshot with browsing hint 1`] = `
<div
  className="backstage-content"
>
  <div
    className="backstage-header"
  >
    <h1>
      <MemoizedFormattedMessage
        defaultMessage="Installed Incoming Webhooks"
        id="installed_incoming_webhooks.header"
      />
    </h1>
  </div>
  <div
    className="backstage-filters"
  >
    <div
      className="backstage-filter__search"
    >
      <SearchIcon />
      <input
        className="form-control"
        id="searchInput"
        onChange={[Function]}
        placeholder="Search"
        style={
          Object {
            "flexGrow": 0,
            "flexShrink": 0,
          }
        }
        type="search"
        value=""
      />
    </div>
  </div>
  <span
    className="backstage-list__hint"
  >
    <MemoizedFormattedMessage
      defaultMessage="Search by title of the webhook or by associated channel. Examples: \\"My Webhook Title\\", \\"town-square\\", or \\"Town Square\\"."
      id="installed_incoming_webhooks.hint"
    />
  </span>
  <span
    className="backstage-list__help"
  />
  <div
    className="backstage-list"
  />
</div>
`;

exports[`components/backstage/components/BackstageList Should match snapshot without browsing hint 1`] = `
<div
  className="backstage-content"
>
  <div
    className="backstage-header"
  >
    <h1>
      <MemoizedFormattedMessage
        defaultMessage="Installed Incoming Webhooks"
        id="installed_incoming_webhooks.header"
      />
    </h1>
  </div>
  <div
    className="backstage-filters"
  >
    <div
      className="backstage-filter__search"
    >
      <SearchIcon />
      <input
        className="form-control"
        id="searchInput"
        onChange={[Function]}
        placeholder="Search"
        style={
          Object {
            "flexGrow": 0,
            "flexShrink": 0,
          }
        }
        type="search"
        value=""
      />
    </div>
  </div>
  <span
    className="backstage-list__hint"
  />
  <span
    className="backstage-list__help"
  />
  <div
    className="backstage-list"
  />
</div>
`;
